--- a/Day1/DL_DL_Roundtable/DI_DL_Roundtable.ipynb
+++ b/Day1/DL_DL_Roundtable/DI_DL_Roundtable.ipynb
@@ -123,6 +123,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Admin\n",
+    "\n",
+    "* 9am to 4pm UK Time\n",
+    "* Set Breaks Finishing\n",
+    "    * c. 11am \n",
+    "    * c. 12pm - 1pm\n",
+    "    * c. 2.30pm \n",
+    "* + breaks\n",
+    "    * 5-10min frequently"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Contact\n",
+    "\n",
+    "* michael.burgess@qa.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Courseware & Tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* zip\n",
+    "    * pdfs for every module\n",
+    "        * one big pdf which combines all the others\n",
+    "    * technical files\n",
+    "        * '.ipynb'\n",
+    "            * you cannot open these\n",
+    "* https://mybinder.org/v2/gh/mjburgess/concepts/HEAD\n",
+    "    * create a remote machine & install all necessary components\n",
+    "    * you can use to run remote programming code\n",
+    "        * which illustrates solutions to some analytical problems"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
